--- a/LanchesMac/Views/Home/Index.cshtml
+++ b/LanchesMac/Views/Home/Index.cshtml
@@ -7,6 +7,6 @@
 <div class="row">
 	@foreach(var lanche in Model.LanchesPreferidos)
 	{
-		<partial name="_LancheResumo" for="@lanche"
+		<partial name="_LanchesResumo" for="@lanche" />
 	}
 </div>
