--- a/LanchesMac/Views/Lanche/List.cshtml
+++ b/LanchesMac/Views/Lanche/List.cshtml
@@ -4,11 +4,11 @@
 	<h2>@Model.CategoriaAtual</h2>
 </div>
 
-<div class="contianer">
+<div class="container">
 	<div class="row">
 		@foreach(var lanche in Model.Lanches)
 		{
-			<partial name="_LancheResumo" for="@lanche" />
+			<partial name="_LanchesResumo" for="@lanche" />
 		}
 	</div>
 </div>
